--- a/src/styles/pages/login.module.css
+++ b/src/styles/pages/login.module.css
@@ -16,7 +16,7 @@
   list-style-type: none;
   margin-right: auto;
   font-family: 'Reem Kufi';
-  color: #dc6379;
+  color: #702f3b;
   cursor: pointer;
 }
 .signin {
