--- a/src/styles/commponents/navbar.module.css
+++ b/src/styles/commponents/navbar.module.css
@@ -23,8 +23,8 @@
 
 .links::before {
   content: '';
-  /* show by default */
 }
+
 .links {
   cursor: pointer;
   position: relative;
@@ -119,8 +119,9 @@
   flex-direction: column;
   position: absolute;
   margin-top: 4rem;
+  margin-left: -10rem;
   height: 30rem;
-  width: 13rem;
+  width: 16vw;
   box-shadow: rgb(0 0 0 / 10%) 0 4px 8px 0;
   border-radius: 0.7rem;
   background-color: #fafafa;
@@ -167,6 +168,55 @@
   width: 100%;
 }
 
+.animlink {
+  cursor: pointer;
+  font-size: 18px;
+  position: relative;
+  white-space: nowrap;
+  color: var(--color-text);
+}
+
+.animlink::before,
+.animlink::after {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background: currentColor;
+  top: 100%;
+  left: 0;
+  pointer-events: none;
+}
+
+.animlink::before {
+  content: '';
+}
+
+.animlink::before {
+  transform-origin: 100% 50%;
+  transform: scale3d(0, 1, 1);
+  transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+}
+
+.animlink:hover::before {
+  transform-origin: 0% 50%;
+  transform: scale3d(1, 2, 1);
+  transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
+}
+
+.animlink::after {
+  content: '';
+  top: calc(100% + 4px);
+  transform-origin: 100% 50%;
+  transform: scale3d(0, 1, 1);
+  transition: transform 0.4s 0.1s cubic-bezier(0.2, 1, 0.8, 1);
+}
+
+.animlink:hover::after {
+  transform-origin: 0% 50%;
+  transform: scale3d(1, 1, 1);
+  transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
+}
+
 @media only screen and (max-width: 1350px) {
   .logo {
     height: 6rem;
@@ -179,16 +229,33 @@
   .links {
     font-size: 0.9rem;
   }
+  .popover {
+    margin-left: -5rem;
+  }
 }
 @media only screen and (max-width: 1200px) {
   .links {
     margin: 0rem 2rem 0rem 2rem;
+  }
+  .popover {
+    height: 25rem;
+  }
+  .inneravatar {
+    width: 5rem;
+    height: 5rem;
+  }
+  .profileBtn {
+    width: 8rem;
   }
 }
 
 @media only screen and (max-width: 950px) {
   .links {
     margin: 0rem 1rem 0rem 1rem;
+  }
+  .popover {
+    margin-left: -8rem;
+    width: 13rem;
   }
 }
 @media only screen and (max-width: 650px) {
@@ -203,5 +270,18 @@
     font-size: 0.6rem;
     font-weight: 0;
     margin: 0rem 0rem 0rem 1rem;
+  }
+  .avatar {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .popover {
+    margin-left: -8rem;
+    width: 11rem;
+    height: 22rem;
+  }
+  .inneravatar {
+    width: 3.5rem;
+    height: 3.5rem;
   }
 }
