--- a/src/styles/commponents/navbar.module.css
+++ b/src/styles/commponents/navbar.module.css
@@ -112,12 +112,13 @@
 }
 
 .popover {
+  display: flex;
+  position: absolute;
+  z-index: 2;
   padding-top: 1.5rem;
   font-family: 'Reem Kufi';
-  display: flex;
   align-items: center;
   flex-direction: column;
-  position: absolute;
   margin-top: 4rem;
   margin-left: -10rem;
   height: 30rem;
@@ -283,5 +284,29 @@
   .inneravatar {
     width: 3.5rem;
     height: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .logo {
+    height: 3rem;
+  }
+  .links {
+    font-size: 0.5rem;
+  }
+
+  .login {
+    padding: 0.7rem 1.2rem;
+    font-size: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .logo {
+    height: 2.5rem;
+  }
+  .login {
+    padding: 0.5rem 1rem;
+    font-size: 0.4rem;
   }
 }
