--- a/src/styles/pages/homepage.module.css
+++ b/src/styles/pages/homepage.module.css
@@ -35,7 +35,7 @@
   font-family: 'Reem Kufi';
 }
 .car {
-  max-width: 80%;
+  max-width: 71%;
   margin: 5rem 0rem 0rem 5rem;
   opacity: 0;
 }
@@ -96,3 +96,67 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .heading {
+    margin-top: -3rem;
+    font-size: 2rem;
+  }
+  .cta {
+    font-size: 1.7rem;
+  }
+  .car {
+    padding-top: 1vw;
+  }
+}
+
+@media screen and (max-width: 450px) and (max-height: 950px) {
+  .heading {
+    margin-top: 0rem;
+    font-size: 2.1rem;
+    text-align: center;
+    margin: auto;
+  }
+
+  .cta img {
+    width: 2.5rem;
+  }
+
+  .cta span {
+    font-size: 1.8rem;
+  }
+  .cta {
+    margin-top: 2.5rem;
+  }
+  .car {
+    padding-top: 2vw;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .heading {
+    padding: 0;
+    font-size: 1.5rem;
+    text-align: center;
+    margin: auto;
+  }
+  .cta span {
+    font-size: 1.1rem;
+  }
+  .cta img {
+    width: 2rem;
+  }
+}
+
+/* @media screen and (max-width: 380px) and (max-height: 1000px) {
+  .heading {
+    padding-top: 10vh;
+    font-size: 2rem;
+  }
+  .cta {
+    padding: 3vh 0rem 3vh 0rem;
+  }
+  .cta span {
+    font-size: 1.5rem;
+  }
+} */
