--- a/src/styles/pages/create.module.css
+++ b/src/styles/pages/create.module.css
@@ -65,6 +65,10 @@ input[type='date']:focus::-webkit-datetime-edit {
   color: black !important;
 }
 
+.quill {
+  font-size: 5rem;
+}
+
 .bar {
   width: 100%;
   background: rgba(107, 107, 107, 0.5);
@@ -116,6 +120,7 @@ input[type='date']:focus::-webkit-datetime-edit {
   padding-bottom: 10rem;
   margin: auto;
   width: 90%;
+  height: 90%;
 }
 
 @media screen and (max-width: 2570px) {
@@ -146,6 +151,7 @@ input[type='date']:focus::-webkit-datetime-edit {
   }
   .editor {
     top: 5vh;
+    padding-bottom: 10rem;
   }
 }
 
@@ -178,6 +184,6 @@ input[type='date']:focus::-webkit-datetime-edit {
 
   .editor {
     top: 100vh;
-    padding-bottom: 5rem;
+    padding-bottom: 10rem;
   }
 }
