--- a/src/styles/pages/homepage.module.css
+++ b/src/styles/pages/homepage.module.css
@@ -1,162 +1,79 @@
-.hero {
-  width: 100%;
-  height: 100%;
+.section {
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
   position: absolute;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-top: auto;
-  align-items: center;
   z-index: -1;
+  display: flex;
+  height: 99%;
+  width: 90%;
+  align-items: center;
 }
-.heading {
+.hero {
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.left .heading {
+  font-size: 2.8vw;
+  max-width: 90%;
   opacity: 0;
-  grid-column: 1/2;
-  margin-left: 6rem;
 }
+.right {
+  flex-grow: 1;
+  max-width: 40%;
+  max-height: 90%;
+}
+
+.right .car {
+  opacity: 0;
+}
+
 .cta {
   opacity: 0;
-  margin-left: 6rem;
-}
-
-.cta img {
-  vertical-align: middle;
-  width: 3.5vw;
-}
-
-.cta span {
-  font-size: 1.5rem;
-  font-family: 'Reem Kufi';
-  padding: 0rem 0rem 0rem 1.5rem;
+  display: flex;
+  gap: 2vw;
+  align-items: center;
   cursor: pointer;
 }
 
-.header {
-  font-size: 2.5rem;
-  font-family: 'Reem Kufi';
+.cta img {
+  width: 3vw;
 }
-.car {
-  max-width: 71%;
-  margin: 5rem 0rem 0rem 5rem;
-  opacity: 0;
-}
-@media screen and (max-width: 1000px) {
-  .hero {
-    grid-template-rows: 1fr 1fr;
-    height: 100%;
-    align-items: end;
-    justify-items: center;
-    row-gap: 2rem;
-  }
-
-  .header {
-    grid-row: 1/2;
-    grid-column: 1/3;
-    font-size: 2.5rem;
-    padding: 10rem 0rem 0rem 0rem;
-  }
-
-  .car {
-    grid-column: 1/3;
-    width: 29rem;
-    margin: 0;
-  }
+.cta span {
+  font-size: 1.5vw;
 }
 
-@media screen and (max-width: 800px) {
-  .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .heading {
-    padding: 4rem 0rem 0rem 0rem;
-    font-size: 2.8rem;
-  }
-  .cta {
-    font-size: 2rem;
-  }
-  .cta img {
-    width: 2rem;
-  }
-}
 @media screen and (max-width: 600px) {
-  .heading {
-    font-size: 2.5rem;
-    margin-left: 3rem;
+  .hero {
+    flex-direction: column;
+    height: 50%;
+    gap: 7vh;
   }
-  .cta {
-    margin-left: 3rem;
-    font-size: 1.9rem;
-  }
-  .cta img {
-    width: 1.8rem;
-  }
-  .car {
-    padding-top: 3rem;
-    width: 100%;
-  }
-}
 
-@media screen and (max-width: 400px) {
-  .heading {
-    margin-top: -3rem;
-    font-size: 2rem;
-  }
-  .cta {
-    font-size: 1.7rem;
-  }
-  .car {
-    padding-top: 1vw;
-  }
-}
-
-@media screen and (max-width: 450px) and (max-height: 950px) {
-  .heading {
-    margin-top: 0rem;
-    font-size: 2.1rem;
-    text-align: center;
-    margin: auto;
+  .left .heading {
+    font-size: 3.4vh;
   }
 
   .cta img {
-    width: 2.5rem;
+    width: 5vh;
   }
 
   .cta span {
-    font-size: 1.8rem;
+    font-size: 2.5vh;
   }
-  .cta {
-    margin-top: 2.5rem;
+
+  .right {
+    max-width: 100%;
+    height: 50%;
   }
   .car {
-    padding-top: 2vw;
+    width: 40vh;
   }
 }
-
-@media screen and (max-width: 380px) {
-  .heading {
-    padding: 0;
-    font-size: 1.5rem;
-    text-align: center;
-    margin: auto;
-  }
-  .cta span {
-    font-size: 1.1rem;
-  }
-  .cta img {
-    width: 2rem;
-  }
-}
-
-/* @media screen and (max-width: 380px) and (max-height: 1000px) {
-  .heading {
-    padding-top: 10vh;
-    font-size: 2rem;
-  }
-  .cta {
-    padding: 3vh 0rem 3vh 0rem;
-  }
-  .cta span {
-    font-size: 1.5rem;
-  }
-} */
