--- a/src/styles/pages/explore.module.css
+++ b/src/styles/pages/explore.module.css
@@ -6,16 +6,14 @@
 }
 .container > h1 {
   font-size: clamp(1.5rem, 3vw, 4rem);
-  margin-top: max(20vh, 10rem);
+  margin-top: max(4rem, 20vh);
   text-align: center;
 }
 
 .grid {
   max-width: 80%;
-  z-index: -1;
   left: 0;
   right: 0;
-  margin-top: max(18vh, 3rem);
   margin-left: auto;
   margin-right: auto;
   display: grid;
@@ -70,11 +68,13 @@
   justify-content: space-between;
 }
 .card h1 {
+  cursor: pointer;
   font-size: clamp(1.2rem, 1.2vw, 2.5rem);
   margin: 0;
   color: #333;
 }
 .card p {
+  cursor: pointer;
   flex: 1;
   line-height: 1.4;
   font-size: clamp(0.8rem, 1vw, 2rem);
@@ -91,4 +91,5 @@
   padding-bottom: 60%;
   background-size: cover;
   background-position: center center;
+  cursor: pointer;
 }
