--- a/src/styles/pages/homepage.module.css
+++ b/src/styles/pages/homepage.module.css
@@ -2,19 +2,23 @@
   top: 0;
   left: 0;
   right: 0;
-  margin: auto;
+  margin-top: 10rem;
+  margin-left: auto;
+  margin-right: auto;
   position: absolute;
   z-index: -1;
-  display: flex;
-  height: 99%;
-  width: 90%;
+  height: auto;
+  width: 100%;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
 }
 .hero {
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -50,6 +54,92 @@
   font-size: 1.5vw;
 }
 
+.stories {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5rem;
+  max-width: 80%;
+  margin: 0;
+  height: 100%;
+}
+
+.grid {
+  max-width: 100%;
+  left: 0;
+  right: 0;
+  display: grid;
+  grid-template-rows: auto;
+  grid-gap: 3rem;
+  padding-bottom: 2rem;
+  padding-left: 0;
+  justify-content: center;
+}
+
+@media (min-width: 30em) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 60em) {
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.card {
+  background: white;
+  text-decoration: none;
+  color: #444;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  max-width: max-content;
+  position: relative;
+  top: 0;
+  transition: all 0.1s ease-in;
+}
+.card:hover {
+  top: -2px;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+}
+.card article {
+  padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.card h1 {
+  font-size: clamp(1.2rem, 1.2vw, 2.5rem);
+  margin: 0;
+  color: #333;
+}
+.card p {
+  flex: 1;
+  line-height: 1.4;
+  font-size: clamp(0.8rem, 1vw, 2rem);
+}
+.card span {
+  font-size: clamp(0.7rem, 0.8vw, 1.7rem);
+  font-weight: bold;
+  color: #999;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  margin: 2em 0 0 0;
+}
+.card .thumb {
+  padding-bottom: 60%;
+  background-size: cover;
+  background-position: center center;
+}
+
+.pagecontainer {
+  height: 100%;
+  width: 100%;
+}
 @media screen and (max-width: 600px) {
   .hero {
     flex-direction: column;
