--- a/src/styles/pages/homepage.module.css
+++ b/src/styles/pages/homepage.module.css
@@ -12,7 +12,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 8rem;
+  gap: 4rem;
 }
 .hero {
   top: 0;
@@ -76,6 +76,15 @@
   justify-content: center;
 }
 
+.footer {
+  opacity: 0;
+  text-align: center;
+  font-size: max(0.5rem, 0.8vw);
+}
+.mail {
+  color: #e79782;
+}
+
 @media (min-width: 30em) {
   .grid {
     grid-template-columns: 1fr 1fr;
@@ -86,59 +95,6 @@
   .grid {
     grid-template-columns: repeat(4, 1fr);
   }
-}
-
-.card {
-  background: white;
-  text-decoration: none;
-  color: #444;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  max-width: max-content;
-  position: relative;
-  top: 0;
-  transition: all 0.1s ease-in;
-}
-.card:hover {
-  top: -2px;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-}
-.card article {
-  padding: 20px;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.card h1 {
-  font-size: clamp(1.2rem, 1.2vw, 2.5rem);
-  margin: 0;
-  color: #333;
-}
-.card p {
-  flex: 1;
-  line-height: 1.4;
-  font-size: clamp(0.8rem, 1vw, 2rem);
-}
-.card span {
-  font-size: clamp(0.7rem, 0.8vw, 1.7rem);
-  font-weight: bold;
-  color: #999;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  margin: 2em 0 0 0;
-}
-.card .thumb {
-  padding-bottom: 60%;
-  background-size: cover;
-  background-position: center center;
-}
-
-.pagecontainer {
-  height: 100%;
-  width: 100%;
 }
 @media screen and (max-width: 600px) {
   .hero {
